# CAD-Exchanger

./: .gitignore  CAD Exchanger PWT.code-workspace  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  base.cpp  base.hpp  core.cpp  core.hpp  core.ld  objects.cpp  objects.hpp
